--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -1,23 +1,20 @@
-FROM openjdk:11
+FROM amazonlinux
+ENV LANG=en_US.UTF-8
+RUN yum update -y && yum install -y gcc gcc-c++ zlib-devel zip tar gzip && yum clean all && rm -rf /var/cache/yum
 
-RUN apt-get update && \
-        apt-get install -y gcc g++ make libz-dev curl rlwrap
+ENV JAVA_HOME=/usr/lib/graalvm
+ENV GRAALVM_HOME=/usr/lib/graalvm
+ENV GRAAL_VERSION=21.0.0
+RUN curl -4 -L "https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-${GRAAL_VERSION}/graalvm-ce-java11-linux-amd64-${GRAAL_VERSION}.tar.gz" -o /tmp/graalvm.tar.gz \
+    && tar -zxf /tmp/graalvm.tar.gz -C /tmp \
+    && mv /tmp/graalvm-ce-java11-${GRAAL_VERSION} /usr/lib/graalvm \
+    && rm -rf /tmp/*
+RUN /usr/lib/graalvm/bin/gu install native-image
 
-# Install Clojure
-ENV CLOJURE_VERSION=1.10.1.727
+ENV CLOJURE_VERSION=1.10.1.763
 ENV CLOJURE_URL="https://download.clojure.org"
 WORKDIR /tmp
-RUN wget "${CLOJURE_URL}/install/linux-install-${CLOJURE_VERSION}.sh" \
-        && chmod +x linux-install-$CLOJURE_VERSION.sh \
-        && ./linux-install-$CLOJURE_VERSION.sh
-
-# Install GraalVM
-ENV GRAAL_VERSION=20.2.0
-ENV GRAAL_GITHUB_URL="https://github.com/graalvm/graalvm-ce-builds/releases/download"
-ENV GRAAL_FILE="graalvm-ce-java11-linux-amd64-${GRAAL_VERSION}.tar.gz"
-ENV GRAALVM_HOME="/graalvm/"
-WORKDIR /graalvm
-RUN curl -OL "${GRAAL_GITHUB_URL}/vm-${GRAAL_VERSION}/${GRAAL_FILE}"
-RUN echo "${GRAAL_GITHUB_URL}/vm-${GRAAL_VERSION}/${GRAAL_FILE}"
-RUN tar xfz "${GRAAL_FILE}" --strip-components=1
-RUN /graalvm/bin/gu install native-image
+RUN curl -4 -L "${CLOJURE_URL}/install/linux-install-${CLOJURE_VERSION}.sh" -o /tmp/linux-install-${CLOJURE_VERSION}.sh \
+        && chmod +x /tmp/linux-install-$CLOJURE_VERSION.sh \
+        && /tmp/linux-install-$CLOJURE_VERSION.sh \
+        && rm /tmp/linux-install-$CLOJURE_VERSION.sh
